Bug 148241 - The cert-level dropdown list is not honored when signing a key
Summary: The cert-level dropdown list is not honored when signing a key
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: bj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-07-27 00:54 UTC by David Ammouial
Modified: 2007-08-18 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Ammouial 2007-07-27 00:54:21 UTC
Version:           1.2.2 (using KDE KDE 3.5.7)
Installed from:    Debian testing/unstable Packages
OS:                Linux

When I right-clicking on a key to sign it I choose "sign key", the following happens:
1. A first dialog box asks for confirmation.
2. A second one asks the private key I want to use for signing, and the key trust (corresponding to the "--cert-level" of kgpg, I suppose).
3. A terminal is opened with an interactive gpg running inside of it. The "ps" command says that the actual command is:
gpg --no-secmem-warning --expert -u 0x1111111 --sign-key 0x2222222.
0x1111111 is my key ID, and 0x2222222 is the ID of the key I want to sign. Note that this doesn't mention the "--cert-level" option.
4. In this interactive gpg session, I am asked again for confirmation (seems a dup to step 1, btw), then for a passphrase, and gpg signs the key with the default cert-level value.
5. Back in kgpg, the key appears in green, and the displayed key trust does not reflect the one I gave at step 2.

Even though I mentionned the cert-level dropdown list in the short bug description, maybe it is only a consequence of the fact that a terminal-based gpg session is launched, starting the signing process from the beginning again.
Comment 1 Rolf Eike Beer 2007-08-18 10:13:39 UTC
SVN commit 701419 by dakon:

Honor trust level even when signing in terminal

BUG:148241


 M  +2 -1      kgpginterface.cpp  


--- trunk/KDE/kdeutils/kgpg/kgpginterface.cpp #701418:701419
@@ -1722,7 +1722,8 @@
 
     KProcess process;
     process << config.readPathEntry("TerminalApplication", "konsole");
-    process << "-e" << KGpgSettings::gpgBinaryPath() << "--no-secmem-warning" << "--expert" << "-u" << m_signkey;
+    process << "-e" << KGpgSettings::gpgBinaryPath() << "--no-secmem-warning" << "-u" << m_signkey;
+    process << "--default-cert-level" << QString(m_checking);
 
     if (!m_local)
         process << "--sign-key" << m_keyid;