Honor trust level even when signing in terminal

BUG:148241

svn path=/trunk/KDE/kdeutils/kgpg/; revision=701419